--- a/viz/index.html
+++ b/viz/index.html
@@ -10,5 +10,22 @@
   <p><b>PIXI.js Version</b>: visualization powered by PIXI.js WebGL engine. <a href="ver-pixi.js.html">watch this!</a></p>
   <h1>The contrast of Docker Orchestrator scheduler strategies for addtionnal phase based on heuristics</h1>
   <p><b>Parallel Axis</b>:Docker+VM+HM based the contrast of heuristcs strategies. <a href="addtional-functions-contrast.html">watch this!</a></p>
-  <p><b>Line Axis</b>:the contrast of containers addtion phase based on Docker+VM+HM and Docker+VM seperatedly.<a href="arch-addtion-contrast.html">watch this!</a></p>
+  <p><b>Line Axis</b>:基于Docker+VM+HM架构模拟容器实例持续新增，工业实现方式与基于BFD的Docker、VM初始放置方法分别使用HMs数量对比.<a href="contrast-addtion-4-multiprocess-1.html">watch this!</a></p>
+  <p><b>Line Axis</b>:基于Docker+VM+HM架构模拟容器实例持续新增，工业实现方式与基于BFD的Docker、VM初始放置方法分别资源碎片化对比.<a href="contrast-addtion-4-multiprocess-2.html">watch this!</a></p>
+  <p><b>Line Axis</b>:基于Docker+VM+HM架构模拟容器实例持续新增，VM容错工业实现与基于BFD的HM级容错Docker、VM初始放置方法对比容错指标对比.<a href="contrast-addtion-4-multiprocess-safe2.html">watch this!</a></p>
+  <p><b>Line Axis</b>:基于Docker+VM+HM架构模拟容器实例持续新增，非容错Docker、VM初始放置与HM级容错Docker、VM初始放置方法对比容错指标对比.<a href="contrast-addtion-4-multiprocess-safe1.html">watch this!</a></p>
+  <p><b>Line Axis</b>:基于Docker+VM+HM架构模拟容器实例持续新增，VM容错工业实现与基于BFD的HM级容错Docker、VM初始放置方法对比资源碎片化度.<a href="contrast-addtion-4-multiprocess-safe3.html">watch this!</a></p>
+  <p><b>Line Axis</b>:基于Docker+VM+HM架构模拟容器实例持续新增，非容错Docker、VM初始放置与HM级容错Docker、VM初始放置方法对比资源碎片化度.<a href="contrast-addtion-4-multiprocess-safe4.html">watch this!</a></p>
+  <p><b>Line Axis</b>:基于Docker+VM+HM架构模拟聚合场景，VM-HM的BFD聚合与Docker-VM-HM的BFD聚合方法对比集群能耗.<a href="contrast-addtion-4-multiprocess-safe.html">watch this!</a></p>
+  <p><b>Line Axis</b>:基于Docker+VM+HM架构模拟聚合场景，VM-HM的BFD聚合与Docker-VM-HM的BFD聚合方法对比集群资源碎片化.<a href="contrast-addtion-4-multiprocess-safe.html">watch this!</a></p>
+  <p><b>Line Axis</b>:基于Docker+VM+HM架构模拟聚合场景，VM-HM的非容错BFD聚合与Docker-VM-HM的HM级容错BFD聚合方法对比集群能耗.<a href="contrast-addtion-4-multiprocess-safe.html">watch this!</a></p>
+  <p><b>Line Axis</b>:基于Docker+VM+HM架构模拟聚合场景，VM-HM的非容错BFD聚合与Docker-VM-HM的HM级容错BFD聚合方法对比容错指标.<a href="contrast-addtion-4-multiprocess-safe.html">watch this!</a></p>
+  <p><b>Line Axis</b>:基于Docker+VM+HM架构模拟聚合场景，VM-HM的MBBO聚合与Docker-VM-HM的MBBO聚合方法对比集群能耗.<a href="contrast-addtion-4-multiprocess-safe.html">watch this!</a></p>
+  <p><b>Line Axis</b>:基于Docker+VM+HM架构模拟聚合场景，VM-HM的MBBO聚合与Docker-VM-HM的MBBO聚合方法对比集群资源碎片化.<a href="contrast-addtion-4-multiprocess-safe.html">watch this!</a></p>
+  <p><b>Line Axis</b>:基于Docker+VM+HM架构模拟聚合场景，Docker-VM-HM的BFD聚合与Docker-VM-HM的MBBO聚合方法对比集群能耗.<a href="contrast-addtion-4-multiprocess-safe.html">watch this!</a></p>
+  <p><b>Line Axis</b>:基于Docker+VM+HM架构模拟聚合场景，Docker-VM-HM的BFD聚合与Docker-VM-HM的MBBO聚合方法对比集群资源碎片化.<a href="contrast-addtion-4-multiprocess-safe.html">watch this!</a></p>
+  <p><b>Line Axis</b>:基于Docker+VM+HM架构模拟聚合场景，VM-HM的非容错MBBO聚合与Docker-VM-HM的HM级容错MBBO聚合方法对比容错指标.<a href="contrast-addtion-4-multiprocess-safe.html">watch this!</a></p>
+  <p><b>Line Axis</b>:基于Docker+VM+HM架构模拟聚合场景，VM-HM的非容错MBBO聚合与Docker-VM-HM的HM级容错MBBO聚合方法对比资源碎片化.<a href="contrast-addtion-4-multiprocess-safe.html">watch this!</a></p>
+  
+
 </html>
